<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".digitiselandactivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        app:cardBackgroundColor="@color/followersBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digitalise_lands"
                android:textSize="34sp"
                android:textStyle="bold"
                app:fontFamily="serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fill_all_the_details_below"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="357dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/digilandaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Land Address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="358dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/digiownname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner_of_the_land" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/location"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />

    <TextView
        android:id="@+id/currentlocgps"
        android:layout_width="127dp"
        android:layout_height="90dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/please_click_on_get_location"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/getlocbtn"
        android:layout_width="160dp"
        android:layout_height="31dp"
        android:background="@color/md_blue_400"
        android:onClick="getlocationclick"
        android:text="@string/get_location"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/currentlocgps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toEndOf="@+id/currentlocgps"
        app:layout_constraintTop_toTopOf="@+id/currentlocgps"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/button3"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:background="@color/followersBg"
        android:onClick="digionclick"
        android:text="@string/submit_for_verification"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentlocgps" />


</androidx.constraintlayout.widget.ConstraintLayout>