<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_grey_100"
    tools:context=".detailactivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailtoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/md_blue_grey_100">


        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/joinbtn"
            android:layout_width="261dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@color/md_blue_grey_300"
            android:onClick="joinclick"
            android:text="@string/join_pool"
            android:textAllCaps="false"
            android:textColor="@color/material_drawer_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="358dp"
            android:layout_height="177dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailtoolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="117dp"
                    android:layout_height="94dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/milindapropic" />

                <TextView
                    android:id="@+id/jpnametxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pool_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/jpnametxt"
                    app:layout_constraintTop_toBottomOf="@+id/jpnametxt" />

                <TextView
                    android:id="@+id/jpoollocatxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/iit_patna_bihar"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/area"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/jpareatxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_12_hectare"
                    app:layout_constraintStart_toStartOf="@+id/jpoollocatxt"
                    app:layout_constraintTop_toBottomOf="@+id/jpoollocatxt" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/estimated_profits"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/jpprofit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="Rs 143450"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Total Funds Received"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/jptotinvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="Rs 12000"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="358dp"
        android:layout_height="95dp"
        android:layout_margin="5dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/brief_description"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/jpdesp"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:text="We grow mostly potatoes and Tomatoes in the field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="358dp"
        android:layout_height="225dp"
        android:layout_margin="5dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Report:"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/jpreporttxt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/jpreporttxt"
                android:layout_width="319dp"
                android:layout_height="174dp"
                android:layout_marginTop="2dp"
                android:scrollbars="vertical"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>